ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/IndexMemberDeclarations/parserIndexMemberDeclaration7/input.ts.stderr
error[1005]: Expected ']'
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/IndexMemberDeclarations/parserIndexMemberDeclaration7/input.ts:2:15
  |
2 |    public [x: string]: string;
  |               ^^^^^^

